AUTHORS: update from git

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,6 +11,7 @@ Amichai Rothman
 Andreas Schildbach
 andrewtoth
 Anton Kumaigorodski
+avoidaway
 Bartosz Milczarek
 Bas van Schaik
 Bennett Hoffman
@@ -45,9 +46,11 @@ Glenn Marien
 GreenAddress
 Greg Laun
 gubatron
+hanmz
 Harald Hoyer
 Haoyuan Ge (harryge00)
 HashEngineering
+itorod
 Jakob Janecek
 Jakob Stuber
 Jameson Lopp
@@ -56,6 +59,7 @@ Jarl Fransson
 Jean-Pierre Rupp
 Jim Burton
 Jiri Peinlich
+Johannes Zweng
 Johnathan
 John L. Jegutanis
 Johny George
@@ -64,6 +68,7 @@ Jon Griffiths
 Jonny Heggheim
 Justas Dobiliauskas
 Kalpesh Parmar
+Kasim G
 Ken Sedgwick
 Kevin Greene
 Kirill Vlasov
@@ -73,6 +78,7 @@ langerhans
 Loco
 Manfred Karrer
 Marc-André Tremblay
+Marko Lazaric
 Martin Zachrison
 matija.mazi@gmail.com
 Matt Bogosian
@@ -81,6 +87,7 @@ Matthew Leon
 Matthew Shaylor
 Michael Bell
 Michael Bumann
+Micheal Swiggs-Malmevik
 Mike Hearn
 Mike Mancini
 Mike Rosseel
@@ -91,6 +98,7 @@ mruddy
 Nelson Melina
 Nicola Atzei
 Oğuzhan Çevik
+Oliver Aemmer
 ollekullberg
 Oscar Guindzberg
 Pavol Rusnak
@@ -100,8 +108,8 @@ Peter Stockli
 Peter Todd
 Philip Whitehouse
 Piotr Włodarek
-Richard Green (ragmondo)
 Premek
+Richard Green (ragmondo)
 Robin Owens
 Ronald Hoffman (ScripterRon)
 Ross Nicoll
@@ -111,6 +119,7 @@ Sebastian Ortega
 Shafiullah Rahman
 Simon de la Rouviere
 Simon Vermeersch
+Sorn Županić Maksumić
 sqrrm
 Stephan Oeste
 Stephen Reed
@@ -124,6 +133,7 @@ Tyler Houlihan
 ueno
 Willem Noort
 Will Shackleton
+wiz
 Wojciech Langiewicz
 Xiaofeng Guo
 Ximo Guanter
